src/objects/WebserviceLog__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Webservice Logs</relationshipLabel>
        <relationshipName>Webservice_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Point</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestParameters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Parameters</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <formula>WebserviceConfigurations__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebserviceConfigurations__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Webservice Configurations</label>
        <referenceTo>WebserviceConfigurations__c</referenceTo>
        <relationshipLabel>Webservice Logs</relationshipLabel>
        <relationshipName>WebserviceLogs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Webservice Log</label>
    <listViews>
        <fullName>Webservice_Logs</fullName>
        <columns>NAME</columns>
        <columns>ServiceName__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EndPoint__c</columns>
        <columns>StatusCode__c</columns>
        <columns>Status__c</columns>
        <columns>WebserviceConfigurations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceName__c</field>
            <operation>equals</operation>
            <value>ORSCreateIssueMicroService</value>
        </filters>
        <label>Webservice Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Webservice Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webservice Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>